--- a/examples.html
+++ b/examples.html
@@ -46,8 +46,8 @@
     <hr>
     <var>Variable</var>
     <hr>
-    This is <strong>bold</strong> ( "strong" tag ) <br>
-    This is <em>italic</em> ( "em" tag ) <br>
+    This is <strong>bold</strong> ( "strong" tag, not "b" ) <br>
+    This is <em>italic</em> ( "em" tag, not "i" ) <br>
     This is an <u>underlined text</u> ( u tag )<br>
     My favorite food is <del>pizza</del> <ins>sushi</ins> (del and ins tag )<br>
     Mark <mark> this text </mark> ( mark tag ) <br>
