--- a/tables.html
+++ b/tables.html
@@ -11,7 +11,14 @@
     <p>Tables</p>
 
     <table border="1">
+        <caption>Description</caption>
+        <tr>           
+            <th>Row title 1</th>
+            <th>Row title 2</th>
+            <th>Row title 3</th>
+        </tr>
         <tr>
+            
             <td>Row 1_Column 1</td>
             <td>Row 1_Column 2</td>
             <td>Row 1_Column 3</td>
