--- a/homework/lllcinfo.html
+++ b/homework/lllcinfo.html
@@ -48,9 +48,9 @@
 
 <body>
     <header>
-        <a href="https://www.csl.lu/fr/lllc/" target="_blank">LLLC</a>
-        <a href="https://word.lu/" target="_blank">WORD</a>
-        <a href="https://guichet.public.lu/fr/citoyens.html" target="_blank">Guichet.lu</a>
+        <a style="color: chartreuse;" href="https://www.csl.lu/fr/lllc/" target="_blank">LLLC</a>
+        <a style="color: aqua;" href="https://word.lu/" target="_blank">WORD</a>
+        <a style="color: brown;" href="https://guichet.public.lu/fr/citoyens.html" target="_blank">Guichet.lu</a>
     </header>
     <main>
         <h1>Welcome to our school</h1>
