--- a/box1.html
+++ b/box1.html
@@ -32,7 +32,7 @@
         }
 
         .green {
-            background-color: green;
+            background-color: rgba(0, 128, 0, 0.997);
         }
     </style>
 </head>
